--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       name: 'Pix lifestyle',
       repo: 'https://github.com/1024pix/pix-lifestyle',
       loadSidebar: true,
+      relativePath: true,
     }
   </script>
   <!-- Docsify v4 -->
