Add some style on docsify

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       repo: 'https://github.com/1024pix/pix-lifestyle',
       loadSidebar: true,
       relativePath: true,
+      logo: 'https://storage.gra.cloud.ovh.net/v1/AUTH_27c5a6d3d35841a5914c7fb9a8e96345/pix-help-center/images/pix-logo.svg',
+      themeColor: '#2044dc',
     }
   </script>
   <!-- Docsify v4 -->
