Modify description of html page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Pix Lifestyle</title>
-  <meta name="description" content="A magical documentation generator." />
+  <meta name="description" content="Documentation de l'organisation et les méthodologies au sein du pôle Engineering de Pix." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css" title="vue" />
 </head>
